--- a/Selectors/SeleniumSelectors/02.IDSelectors/02.IDSelectors.csproj
+++ b/Selectors/SeleniumSelectors/02.IDSelectors/02.IDSelectors.csproj
@@ -51,7 +51,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="EntryPoint.cs" />
+    <Compile Include="EntryPt-MSIW.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
